--- a/app/src/main/res/layout/activity_shore_checks.xml
+++ b/app/src/main/res/layout/activity_shore_checks.xml
@@ -126,7 +126,7 @@
                         android:id="@+id/ivForward"
                         android:layout_width="@dimen/small_image"
                         android:layout_height="@dimen/small_image"
-                        android:backgroundTint="@color/colorGreyDark"
+                        android:backgroundTint="@color/app_black"
                         android:src="@drawable/ic_forward"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -137,7 +137,7 @@
                         style="@style/withAlphaTextView"
                         android:layout_marginStart="@dimen/small_margin"
                         android:text="@string/lbl_forwarded"
-                        android:textColor="@color/colorGreyDark"
+                        android:textColor="@color/app_black"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/ivForward"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -149,7 +149,7 @@
                         android:paddingStart="@dimen/default_padding"
                         android:paddingEnd="@dimen/default_padding"
                         android:text="@string/lbl_more"
-                        android:textColor="@color/bgColorGreen"
+                        android:textColor="@color/colorAccent"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
