--- a/app/src/main/res/layout/bubble_article_view.xml
+++ b/app/src/main/res/layout/bubble_article_view.xml
@@ -135,7 +135,7 @@
                         android:id="@+id/ivForward"
                         android:layout_width="@dimen/small_image"
                         android:layout_height="@dimen/small_image"
-                        android:backgroundTint="@color/colorGreyDark"
+                        android:backgroundTint="@color/app_black"
                         android:src="@drawable/ic_forward"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +158,7 @@
                         android:paddingStart="@dimen/default_padding"
                         android:paddingEnd="@dimen/default_padding"
                         android:text="@string/lbl_more"
-                        android:textColor="@color/bgColorGreen"
+                        android:textColor="@color/colorAccent"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -184,6 +184,7 @@
                 style="@style/withAlphaTextView"
                 android:layout_marginTop="@dimen/small_margin"
                 android:text="@{model.article}"
+                tools:visibility="gone"
                 android:textAlignment="viewStart"
                 android:textSize="@dimen/large_textsize"
                 tools:text="@string/extra_large_dummy_text" />
@@ -206,7 +207,7 @@
                         android:id="@+id/ivInfo"
                         android:layout_width="@dimen/small_image"
                         android:layout_height="@dimen/small_image"
-                        android:backgroundTint="@color/colorGreyDark"
+                        android:backgroundTint="@color/app_black"
                         android:src="@drawable/ic_info"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -229,7 +230,7 @@
                         android:paddingStart="@dimen/default_padding"
                         android:paddingEnd="@dimen/default_padding"
                         android:text="@string/lbl_more"
-                        android:textColor="@color/bgColorGreen"
+                        android:textColor="@color/colorAccent"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
