--- a/app/src/main/res/drawable/bg_rounded.xml
+++ b/app/src/main/res/drawable/bg_rounded.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorPrimary"/>
+    <solid android:color="@color/app_background" />
     <corners android:radius="@dimen/extra_small_radius" />
-
 </shape>
