--- a/app/src/main/res/xml/prefernce_settings.xml
+++ b/app/src/main/res/xml/prefernce_settings.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <SwitchPreference
-        app:icon="@drawable/ic_accessibility_24px"
         app:defaultValue="false"
+        app:icon="@drawable/ic_accessibility_24px"
         app:key="@string/key_auto_detect"
         app:title="@string/auto_detect_fake_news_on_whatsapp" />
 
+    <Preference android:layout="@layout/item_divider" />
+
 
     <SwitchPreference
-        app:icon="@drawable/ic_miscellaneous_services"
         app:defaultValue="false"
+        app:icon="@drawable/ic_miscellaneous_services"
         app:key="@string/key_allow_battery_optimization"
         app:title="@string/run_in_battery_optimization_mode" />
+
+    <Preference android:layout="@layout/item_divider" />
 
 </PreferenceScreen>
