Manual fact checking flow implemented
- Implement manul fact checking flow
- Past + Favourite article functionality added-

--- a/app/src/main/res/layout/bubble_article_view.xml
+++ b/app/src/main/res/layout/bubble_article_view.xml
@@ -38,7 +38,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivBookMark"
+                android:id="@+id/ivArrowDown"
                 android:layout_width="@dimen/small_image"
                 android:layout_height="@dimen/small_image"
                 android:layout_marginEnd="@dimen/small_margin"
