--- a/app/src/main/res/layout/fragment_manual_fact_checking.xml
+++ b/app/src/main/res/layout/fragment_manual_fact_checking.xml
@@ -74,6 +74,7 @@
                     <androidx.appcompat.widget.AppCompatTextView
                         style="@style/textView"
                         android:layout_gravity="bottom|end"
+                        android:id="@+id/tvInvestigate"
                         android:layout_marginEnd="@dimen/default_margin"
                         android:layout_marginBottom="@dimen/small_margin"
                         android:text="@string/investigate"
