--- a/app/src/main/res/layout/fragment_past_facts_check_list.xml
+++ b/app/src/main/res/layout/fragment_past_facts_check_list.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/app_background"
-        tools:context=".modules.factchecks.fragments.FactsCheckListFragment">
+        tools:context=".modules.factchecks.fragments.PastCheckListFragment">
 
         <include
             android:id="@+id/llRecyclerView"
