--- a/app/src/main/res/layout/row_fact_check.xml
+++ b/app/src/main/res/layout/row_fact_check.xml
@@ -13,8 +13,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/extra_small_margin"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/extra_small_margin"
         android:background="@drawable/bg_rounded"
         android:backgroundTint="@color/bg_card_grey"
         android:orientation="vertical">
@@ -45,9 +45,10 @@
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/ivBookMark"
-                android:layout_width="@dimen/large_image"
-                android:layout_height="@dimen/large_image"
+                android:layout_width="@dimen/extra_large_image"
+                android:layout_height="@dimen/extra_large_image"
                 android:layout_gravity="center"
+                android:padding="@dimen/small_padding"
                 app:layout_constraintBottom_toBottomOf="@+id/tvNewsHeading"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -72,12 +73,8 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/ivNewsIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxWidth="100dp"
-                android:maxHeight="100dp"
-                android:minWidth="100dp"
-                android:minHeight="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:src="@drawable/ic_logo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -90,9 +87,9 @@
                 android:layout_marginStart="@dimen/extra_small_margin"
                 android:ellipsize="end"
                 android:maxLines="4"
-                android:textSize="@dimen/small_textsize"
                 android:text="@{model.article}"
                 android:textAlignment="gravity"
+                android:textSize="@dimen/small_textsize"
                 app:layout_constraintBottom_toBottomOf="@+id/ivNewsIcon"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ivNewsIcon"
