--- a/app/src/main/res/layout/fragment_article_view.xml
+++ b/app/src/main/res/layout/fragment_article_view.xml
@@ -12,199 +12,206 @@
 
     <ScrollView
         android:layout_width="match_parent"
+        android:id="@+id/llRoot"
         android:layout_height="match_parent"
         android:background="@drawable/bg_rounded">
 
-
         <LinearLayout
+            android:id="@+id/llRootNewsView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@drawable/bg_rounded"
+            android:background="@color/app_background"
             android:orientation="vertical"
             android:paddingStart="@dimen/small_padding"
             android:paddingEnd="@dimen/small_padding"
             android:paddingBottom="@dimen/small_padding">
 
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvTitle"
+                style="@style/textView"
+                android:layout_marginTop="@dimen/extra_small_margin"
+                android:text="@{model.articleTitle}"
+                android:textSize="@dimen/heading_textsize"
+                tools:text="@string/medium_dummy_text" />
+
             <LinearLayout
-                android:id="@+id/llRootNewsView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/app_background"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvTitle"
-                    style="@style/textView"
-                    android:layout_marginTop="@dimen/extra_small_margin"
-                    android:text="@{model.articleTitle}"
-                    android:textSize="@dimen/heading_textsize"
-                    tools:text="@string/medium_dummy_text" />
+                    android:id="@+id/tvNewsSource"
+                    style="@style/withAlphaTextView"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:maxLines="1"
+                    android:text="@{model.sourceName}"
+                    android:textColor="@color/btnBgColorRed"
+                    tools:text="@string/tiny_dummy_text" />
 
-                <LinearLayout
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvNewsDate"
+                    style="@style/withAlphaTextView"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:maxLines="1"
+                    android:text="@{model.date}"
+                    tools:text="@string/tiny_dummy_text" />
+
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivNewsIcon"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="@dimen/small_margin"
+                tools:background="@color/grey" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/small_margin"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvNewsSource"
-                        style="@style/withAlphaTextView"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:gravity="start"
-                        android:maxLines="1"
-                        android:text="@{model.sourceName}"
-                        android:textColor="@color/btnBgColorRed"
-                        tools:text="@string/tiny_dummy_text" />
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/ivForward"
+                        android:layout_width="@dimen/small_image"
+                        android:layout_height="@dimen/small_image"
+                        android:backgroundTint="@color/app_black"
+                        android:padding="@dimen/extra_small_margin"
+                        android:src="@drawable/ic_forward"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvNewsDate"
+                        android:id="@+id/lblForwarded"
                         style="@style/withAlphaTextView"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
+                        android:layout_marginStart="@dimen/extra_small_margin"
+                        android:text="@string/lbl_forwarded"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/ivForward"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvMoreForwardedMsg"
+                        style="@style/textView"
+                        android:layout_gravity="end"
                         android:gravity="end"
-                        android:maxLines="1"
-                        android:text="@{model.date}"
-                        tools:text="@string/tiny_dummy_text" />
+                        android:paddingStart="@dimen/default_padding"
+                        android:paddingEnd="@dimen/default_padding"
+                        android:text="@string/lbl_more"
+                        android:textColor="@color/colorAccent"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                </LinearLayout>
-
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/ivNewsIcon"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_marginTop="@dimen/small_margin"
-                    tools:background="@color/grey" />
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/small_margin"
-                    android:background="@drawable/bg_shadow"
-                    android:orientation="vertical">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/ivForward"
-                            android:layout_width="@dimen/small_image"
-                            android:layout_height="@dimen/small_image"
-                            android:backgroundTint="@color/app_black"
-                            android:src="@drawable/ic_forward"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/tvForwarded"
-                            style="@style/withAlphaTextView"
-                            android:layout_marginStart="@dimen/extra_small_margin"
-                            android:text="@string/lbl_forwarded"
-                            android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/ivForward"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            style="@style/textView"
-                            android:layout_gravity="end"
-                            android:gravity="end"
-                            android:paddingStart="@dimen/default_padding"
-                            android:paddingEnd="@dimen/default_padding"
-                            android:text="@string/lbl_more"
-                            android:textColor="@color/colorAccent"
-                            android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvForwardedMessage"
-                        style="@style/withAlphaTextView"
-                        android:layout_marginTop="@dimen/extra_small_margin"
-                        android:layout_marginBottom="@dimen/small_margin"
-                        android:ellipsize="end"
-                        android:maxLines="4"
-                        android:text="@{model.forwardMessage}"
-                        android:textAlignment="viewStart"
-                        android:textSize="@dimen/small_textsize"
-                        tools:text="@string/extra_large_dummy_text" />
-
-                </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvNewsDescription"
+                    android:id="@+id/tvForwardedMessage"
                     style="@style/withAlphaTextView"
-                    android:layout_marginTop="@dimen/small_margin"
-                    android:text="@{model.article}"
+                    android:layout_marginTop="@dimen/extra_small_margin"
+                    android:ellipsize="end"
+                    android:maxLines="4"
+                    android:text="@{model.forwardMessage}"
                     android:textAlignment="viewStart"
+                    android:textSize="@dimen/small_textsize"
                     tools:text="@string/extra_large_dummy_text" />
 
-                <LinearLayout
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/divider_height"
+                    android:layout_marginTop="@dimen/extra_small_margin"
+                    android:background="@color/dividerColor" />
+
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvNewsDescription"
+                style="@style/withAlphaTextView"
+                android:layout_marginTop="@dimen/small_margin"
+                android:text="@{model.article}"
+                android:textAlignment="viewStart"
+                tools:text="@string/extra_large_dummy_text" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/divider_height"
+                android:layout_marginTop="@dimen/small_margin"
+                android:background="@color/dividerColor" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/small_margin"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/small_margin"
-                    android:background="@drawable/bg_shadow"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/ivInfo"
-                            android:layout_width="@dimen/small_image"
-                            android:layout_height="@dimen/small_image"
-                            android:backgroundTint="@color/app_black"
-                            android:src="@drawable/ic_info"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:id="@+id/tvInfo"
-                            style="@style/withAlphaTextView"
-                            android:layout_marginStart="@dimen/extra_small_margin"
-                            android:text="@string/lbl_abt_source"
-                            android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/ivInfo"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <androidx.appcompat.widget.AppCompatTextView
-                            style="@style/textView"
-                            android:layout_gravity="end"
-                            android:gravity="end"
-                            android:paddingStart="@dimen/default_padding"
-                            android:paddingEnd="@dimen/default_padding"
-                            android:text="@string/lbl_more"
-                            android:textColor="@color/colorAccent"
-                            android:textStyle="bold"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/ivInfo"
+                        android:layout_width="@dimen/small_image"
+                        android:layout_height="@dimen/small_image"
+                        android:backgroundTint="@color/app_black"
+                        android:padding="@dimen/extra_small_margin"
+                        android:src="@drawable/ic_info"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvAboutTheSource"
+                        android:id="@+id/lblInfo"
                         style="@style/withAlphaTextView"
-                        android:layout_marginTop="@dimen/extra_small_margin"
-                        android:layout_marginBottom="@dimen/small_margin"
-                        android:ellipsize="end"
-                        android:maxLines="4"
-                        android:text="@string/medium_dummy_text"
-                        android:textAlignment="viewStart"
-                        android:textSize="@dimen/small_textsize"
-                        tools:text="@string/extra_large_dummy_text" />
+                        android:text="@string/lbl_abt_source"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/ivInfo"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="1.0" />
 
-                </LinearLayout>
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvAboutSourceMore"
+                        style="@style/textView"
+                        android:layout_gravity="end"
+                        android:gravity="end"
+                        android:paddingStart="@dimen/default_padding"
+                        android:paddingEnd="@dimen/default_padding"
+                        android:text="@string/lbl_more"
+                        android:textColor="@color/colorAccent"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvAboutTheSource"
+                    style="@style/withAlphaTextView"
+                    android:layout_marginTop="@dimen/extra_small_margin"
+                    android:layout_marginBottom="@dimen/small_margin"
+                    android:ellipsize="end"
+                    android:maxLines="4"
+                    android:text="@string/medium_dummy_text"
+                    android:textAlignment="viewStart"
+                    android:textSize="@dimen/small_textsize"
+                    tools:text="@string/extra_large_dummy_text" />
+
             </LinearLayout>
             <!--        </androidx.core.widget.NestedScrollView>-->
 
